--- a/app/views/web/admin/langs/_form.html.haml
+++ b/app/views/web/admin/langs/_form.html.haml
@@ -4,4 +4,4 @@
 
   .form-actions
     = f.button :submit, :class => 'btn btn-primary'
-    = link_to t('helpers.links.cancel'), admin_tags_path, :class => 'btn'
+    = link_to t('helpers.links.cancel'), admin_langs_path, :class => 'btn'
