--- a/app/views/layouts/admin_application.html.haml
+++ b/app/views/layouts/admin_application.html.haml
@@ -28,10 +28,10 @@
         .navbar-brand= link_to  t('.logo'), admin_root_path
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
-            %li= link_to "Link 1", "/path1"
-            %li= link_to "Link 2", "/path2"
-            %li= link_to "Link 3", "/path3"
-            %li= link_to "Link 3", "/path3"
+            %li= link_to t('.films'), admin_films_path
+            %li= link_to t('.film_slices'), admin_film_slices_path
+            %li= link_to t('.tags'), admin_tags_path
+            %li= link_to t('.langs'), admin_langs_path
 
     .container
       .row
