--- a/app/views/layouts/admin_application.html.haml
+++ b/app/views/layouts/admin_application.html.haml
@@ -32,6 +32,8 @@
             %li= link_to t('.film_slices'), admin_film_slices_path
             %li= link_to t('.tags'), admin_tags_path
             %li= link_to t('.langs'), admin_langs_path
+            %li= link_to t('.videos'), admin_video_files_path
+            %li= link_to t('.subs'), admin_sub_files_path
 
     .container
       .row
