--- a/app/views/layouts/admin_application.html.haml
+++ b/app/views/layouts/admin_application.html.haml
@@ -34,6 +34,7 @@
             %li= link_to t('.langs'), admin_langs_path
             %li= link_to t('.videos'), admin_video_files_path
             %li= link_to t('.subs'), admin_sub_files_path
+            %li= link_to t('.lessons'), admin_lessons_path
 
     .container
       .row
