Add multi select for videos and subs in film form.

--- a/app/views/web/admin/films/_form.html.haml
+++ b/app/views/web/admin/films/_form.html.haml
@@ -2,6 +2,8 @@
   = f.error_notification
   = f.input :title
   = f.input :description
+  = f.input :video_file_ids, as: :select, collection: video_collection, input_html: { multiple: true, class: 'select2' }
+  = f.input :sub_file_ids, as: :select, collection: sub_collection, input_html: { multiple: true, class: 'select2' }
   = f.input :tag_ids, as: :select, collection: tag_collection, input_html: { multiple: true, class: 'select2' }
 
   .form-actions
