--- a/app/views/web/admin/lessons/_form.html.haml
+++ b/app/views/web/admin/lessons/_form.html.haml
@@ -2,6 +2,8 @@
   = f.error_notification
   = f.input :title
   = f.input :description
+  = f.input :film_slice_ids, as: :select, collection: film_slice_collection, input_html: { multiple: true, class: 'select2' }
+  = f.input :tag_ids, as: :select, collection: tag_collection, input_html: { multiple: true, class: 'select2' }
 
   .form-actions
     = f.button :submit, :class => 'btn btn-primary'
