--- a/app/views/web/admin/film_slices/_form.html.haml
+++ b/app/views/web/admin/film_slices/_form.html.haml
@@ -2,6 +2,9 @@
   = f.error_notification
   = f.input :title
   = f.input :description
+  = f.input :start_at, as: :integer
+  = f.input :stop_at, as: :integer
+
   = f.input :film_id, as: :select, collection: film_collection, input_html: { class: 'select2' }
   = f.input :tag_ids, as: :select, collection: tag_collection, input_html: { multiple: true, class: 'select2' }
 
